modify alignment to avoid overlaping

--- a/shell-app/static/CSS/Index.css
+++ b/shell-app/static/CSS/Index.css
@@ -406,8 +406,8 @@ button {
 
 .close-button {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.25rem;
+  right: 0;
   font-size: 1.5rem;
   cursor: pointer;
 
